// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Accordion should render correctly when closed 1`] = `
<DocumentFragment>
  <div
    class="sc-hKwDye sc-furwcr doTkGV kGiFxU"
  >
    <div
      aria-expanded="false"
      aria-label="open accordion"
      class="sc-kDTinF dRlUmk"
      role="button"
      tabindex="0"
    >
      <div
        class="sc-iqseJM ddlody"
      >
        <h1>
          Foo
        </h1>
        <svg
          class="sc-dkPtRN fmMJqx"
          color="#FFFFFF"
          height="1.7rem"
          isopen="0"
          style="margin-left: 1.7rem;"
          width="1.7rem"
        >
          cut-arrow-right.svg
        </svg>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="rah-static rah-static--height-zero"
      style="width: 100%; height: 0px; overflow: hidden;"
    >
      <div
        style="display: none;"
      >
        <div
          class="sc-gsDKAQ dApsDo"
        >
          Bar
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`The Accordion should render correctly when open 1`] = `
<DocumentFragment>
  <div
    class="sc-hKwDye sc-furwcr doTkGV kGiFxU"
  >
    <div
      aria-expanded="true"
      aria-label="open accordion"
      class="sc-kDTinF dRlUmk"
      role="button"
      tabindex="0"
    >
      <div
        class="sc-iqseJM ddlody"
      >
        <h1>
          Foo
        </h1>
        <svg
          class="sc-dkPtRN kENYTu"
          color="#FFFFFF"
          height="1.7rem"
          isopen="1"
          style="margin-left: 1.7rem;"
          width="1.7rem"
        >
          cut-arrow-right.svg
        </svg>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="rah-animating rah-animating--down rah-animating--to-height-auto"
      style="width: 100%; height: 0px; overflow: hidden; transition: height 500ms ease 0ms;"
    >
      <div
        style=""
      >
        <div
          class="sc-gsDKAQ dApsDo"
        >
          Bar
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
